--- a/lab-9.qmd
+++ b/lab-9.qmd
@@ -12,6 +12,15 @@ execute:
   echo: true
 ---
 
+# Methods
+
+### To begin our analysis, we imported two datasets: one containing wildfire data and another detailing vegetation characteristics. Both datasets were cleaned and standardized in R using the tidyverse, janitor, and lubridate packages. Column names were cleaned for consistency, and missing or irrelevant values were removed to ensure a clean base. For the fire dataset, we focused on the variable eq_radius_m, which reflects the growth of fire events and serves as a fill-in for fire severity. We used this variable to classify each fire section into one of three severity categories: Low severity (radial growth < 250 meters), Moderate severity (250–700 meters), and High severity (>700 meters). This classification allowed us to compare key environmental variables across consistent severity groupings.
+### After filtering for valid growth values and applying our severity classifications, we calculated summary statistics for each category. On average, high-severity fires had a growth of approximately 1589 meters, burned a mean area of 3432 hectares, and were associated with an actual evapotranspiration (AET) value of 49.0 and a moisture deficit (DEF) of 72.0. Alternatively, moderate-severity fires showed a mean radial growth of 437 meters, a mean area of 973 hectares, AET of 54.4, and DEF of 65.9. Low-severity fires had the smallest radial growth with an average of 99.6 meters, burned 295 hectares on average, and had an AET of 53.0 and DEF of 71.0.
+### To determine whether fire severity had a statistically significant effect on environmental variables, we conducted Analysis of Variance (ANOVA) tests on two continuous variables: actual evapotranspiration (AET) and moisture deficit (DEF). These variables indicate landscape water availability and drought stress, which are critical in post-fire vegetation recovery. The ANOVA for AET showed a statistically significant F-value, indicating that AET differs across fire severity classes. The ANOVA for DEF also showed significant differences between severity groups. These results suggest that high-severity fires contribute to more water-limited conditions, hindering vegetation recovery.
+### In parallel with the fire data analysis, we explored the LANDFIRE vegetation dataset to identify and characterize the types of ecosystems present within our study region. This dataset included a range of ecological classifications, such as evt_class, evt_name, and evt_phys, representing vegetation class, specific vegetation type, and physical structure, respectively.
+### After cleaning the vegetation dataset and removing placeholder values (e.g., value == -9999), we generated a summary of the most common vegetation classes. The dominant classes were Dwarf Shrubland, Shrubland, and Floodplain Forest and Shrubland, with notable types such as Alaska Arctic Coastal Sedge-Dwarf Shrubland and Alaska Arctic Large River Floodplain Forest. These classifications show insight into the diversity of vegetation in fire-prone regions. While this analysis did not directly compare pre- and post-fire transitions, it established a foundational understanding of the ecosystems most likely to be affected by varying levels of fire severity.
+
+
 ```{r}
 library(tidyverse)
 library(janitor)
@@ -29,6 +38,7 @@ fire_data <- fire_data %>%
   ))
 
 ```
+
 ```{r}
 severity_summary <- fire_data %>%
   group_by(severity_class) %>%
@@ -56,6 +66,7 @@ ggplot(fire_data, aes(x = severity_class, y = def_raw, fill = severity_class)) +
 
 ```
 
+
 ```{r}
 aet_aov <- aov(aet_raw ~ severity_class, data = fire_data)
 summary(aet_aov)
@@ -63,7 +74,8 @@ summary(aet_aov)
 def_aov <- aov(def_raw ~ severity_class, data = fire_data)
 summary(def_aov)
 ```
-
+### To assess whether environmental conditions varied across fire severity levels, we performed one-way ANOVA tests on actual evapotranspiration (AET) and water deficit (DEF) grouped by severity_class.
+### AET showed a significant difference across severity levels (F₂,63840 = 218.3, P < 0.001), as did DEF (F₂,63840 = 68.91, P < 0.001). These results indicate that fire severity is significantly associated with differences in site moisture, where fires in drier areas (lower AET, higher DEF) tended to be more severe. This supports the idea that landscape water availability may influence fire behavior and post-fire vegetation response 
 
 ```{r}
 vegetation_data <- read_csv("data/vegetation_data.csv") %>%
@@ -98,6 +110,9 @@ fire_data %>%
 
 ```
 
+### To investigate whether certain vegetation types are more likely to experience higher severity fires, we calculated the proportion of low, moderate, and high severity classifications within each vegetation class.
+### The distribution of severity was remarkably consistent across vegetation types, with most classes exhibiting a near-uniform proportion of severity levels.For example, "Herbaceous - shrub-steppe", "Shrubland", and "Open Tree Canopy" all showed similar breakdowns of high, low, and moderate severity fires. This supports earlier ANOVA results indicating that fire severity does not vary significantly across vegetation classes.
+
 ## How do evapotranspiration or water deficit vary by vegetation type?
 
 ```{r}
@@ -110,6 +125,10 @@ fire_data %>%
 
 ```
 
+### To explore how environmental water conditions vary across vegetation types, we summarized mean actual evapotranspiration (AET) and mean water deficit (DEF) by evt_class.
+### Across the most common vegetation classes, AET ranged from approximately 51.8 to 53.5 mm, while DEF ranged from 68.0 to 72.4 mm. Although the numerical differences were small, herbaceous vegetation types (e.g., shrub-steppe and forbland) tended to have slightly lower water deficits compared to forested types like "Closed Tree Canopy".This may reflect differences in water use or microclimate among plant functional groups.
+
+
 ## Test if high-severity fires are more common in certain vegetation classes?
 
 ```{r}
@@ -117,6 +136,11 @@ anova_severity <- aov(radial_growth_m_d ~ evt_class, data = fire_data)
 summary(anova_severity)
 
 ```
+
+### To determine whether fire severity differed across vegetation types, we ran a one-way ANOVA comparing radial_growth_m_d across evt_class groups.
+### The result was not statistically significant (F₍19, 63823₎ = 1.24, P = 0.217), indicating that fire severity did not vary substantially between vegetation classes in this dataset.
+### In other words, no single vegetation type was consistently associated with more or less severe fires, based on radial growth rate.
+
 
 ## Plot average radial_growth_m_d over time since fire by severity?
 
@@ -128,6 +152,10 @@ ggplot(fire_data, aes(x = days_burned, y = radial_growth_m_d, color = severity_c
        x = "Days Since Ignition", y = "Radial Growth (m/day)")
 
 ```
+
+### High-severity fires showed much higher and more variable radial growth rates compared to low and moderate severity fires. However, as the number of days burned increased, radial growth appeared to decline slightly, particularly in high-severity events.
+### A linear smoothing line fitted to each severity class indicated a negative relationship between fire duration and growth, with the steepest decline occurring in high-severity fires. This suggests that longer burn durations may suppress vegetation recovery, especially in areas experiencing high-intensity burns.
+
 
 ## “Recovered” vs “not recovered” plot
 
@@ -148,6 +176,8 @@ fire_data %>%
   theme_minimal()
 ```
 
+### Fires classified as low severity were more likely to be labeled "recovered" (radial growth > 500 m/day), while high severity fires had the lowest proportion of recovery (Fig. 3). This supports the idea that higher severity events inhibit or delay post-fire vegetation growth.
+
 ## Logisic regression model to test whether severity predicts recovery? 
 
 ```{r}
@@ -159,5 +189,8 @@ recovery_model <- glm(recovered_bin ~ severity_class + aet_raw + def_raw,
 
 summary(recovery_model)
 ```
+
+### A logistic regression model was used to examine whether fire severity and environmental conditions predicted post-fire vegetation recovery. While severity class was not a statistically significant predictor of recovery (P > 0.05), both actual evapotranspiration (AET) and water deficit (DEF) were significant. Specifically, higher AET was associated with a slight decrease in the probability of recovery (β = −0.0029, P = 0.0018), and higher DEF was also negatively associated with recovery (β = −0.0023, P < 0.001). These results suggest that drier conditions may inhibit vegetation recovery following wildfire, regardless of fire severity.
+
 
 
